--- a/public/css/main.css
+++ b/public/css/main.css
@@ -338,6 +338,15 @@ div.content-container {
   outline: none;
 }
 
+.updateroom-container-one {
+  position: absolute;
+  margin-top: 250px;
+}
+
+.updateroom-container-one .update {
+  width: 150px;
+}
+
 .updateroom-container {
   position: absolute;
   margin-top: 250px;
