--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -300,6 +300,14 @@ h1,p{
     outline:none;
 }
 // delete and update for room
+.updateroom-container-one{
+    position:absolute;
+    margin-top:250px;
+}
+.updateroom-container-one .update{
+    width:150px;
+}
+
 .updateroom-container{
     position:absolute;
     margin-top:250px;
