--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -3,15 +3,16 @@
     padding:0;
     margin:0;
     box-sizing: border-box;
+    
 }
 body {
     font-family: 'Mulish', sans-serif;
-    background: linear-gradient(to top, #6699ff 0%, #ffffff 93%);
+    background: rgb(190,205,227);
+    background: linear-gradient(193deg, rgba(190,205,227,1) 13%, rgba(145,193,219,1) 60%);
     margin: 0;
 }
 .table{
     width:80vw;
-   
 }
 // scrollbar
 /* width */
@@ -46,6 +47,9 @@ body {
     text-align: center;
     padding:5px;
     width:100px;
+}
+tr:nth-child(even) {
+    background-color: #f2f2f2;
 }
 .view-customer,
 .view-guest,
@@ -138,6 +142,9 @@ body {
 
 h1,p{
     text-align: center;
+    color:black;
+    text-transform: uppercase;
+    font-weight:900;
 }
 .insert-customer-container,
 .insert-room-container,
@@ -147,6 +154,7 @@ h1,p{
     margin:0 auto;
     margin-bottom:40px;
 }
+
 .room-input-container input,.room-input-container label,
 .customer-input-container input,.customer-input-container label{
     width:300px;
@@ -240,9 +248,9 @@ h1,p{
   }
 
   .sidebar a.active {
-    background-color: rgb(52,144,220);
-    color: white;
-    text-transform: uppercase;
+    text-transform:uppercase;
+    font-weight:bold;
+    background:rgb(227, 243, 242);
   }
   
   .sidebar a:hover:not(.active) {
@@ -255,7 +263,8 @@ h1,p{
   div.content-container {
     margin-left: 210px;
     padding: 1px 16px;
-    height: auto;
+    height: 100vh;
+    
   }
 //   buttons update and delete
 .delete-form{
@@ -270,6 +279,14 @@ h1,p{
     position:absolute;
     margin-top:389px;
     margin-left:500px;
+}
+.delete-guest{
+    margin-top:520px;
+    margin-left:400px;
+}
+.delete-booking{
+    margin-top:2px;
+    
 }
 // for guest buttons and delete
 .updateguest-container{
@@ -289,11 +306,12 @@ h1,p{
 .confirm-booking{
     position:absolute;
     margin-top:470px;
+    margin-left:50px;
 }
 .deletebooking-form{
     position:absolute;
-    margin-top:521px;
-    margin-left:520px;
+    margin-top:519px;
+    margin-left:290px;
 }
 // booking room container
 .bookingroom-input{
@@ -384,6 +402,9 @@ h1,p{
     margin-top:339px;
 }
 // buttons color
+.go-record{
+    width:200px;
+}
 .delete{
     background:rgb(241, 47, 47);
 }
@@ -397,7 +418,7 @@ h1,p{
     flex-wrap: wrap;
 }
 .count-body {
-    background: whitesmoke;
+    background:rgb(243, 237, 237);
     display:flex;
     justify-content:space-evenly;
     padding:25px;
@@ -405,7 +426,7 @@ h1,p{
     width:400px;
     height:200px;
     border-radius:10px;
-    box-shadow: 5px 10px #555;
+    box-shadow: 5px 10px rgb(124, 121, 121);
     cursor:pointer;
     transition: transform 250ms;
 }
@@ -417,7 +438,49 @@ h1,p{
 }
 .count-container a{
     text-decoration:none;
+    color:rgb(77, 73, 73);
+}
+.count-container p {
+    color:rgb(77, 73, 73);
+}
+.count-container h5{
+    font-weight: 900;
+    font-size: 23px;
+}
+// navigation
+.navbar{
+    background:#F4FAFF;
+    padding:10px;
+    display:flex;
+    justify-content: flex-end;
+}
+.nav-button{
+    display:none;
+}
+.login-logout{
+    display:flex;
+}
+.menu{
+    display:none;
+}
+.login-container,
+.logout-container{
+    padding:10px;
+}
+.login-container a,
+.logout-container a{
+    text-decoration:none;
     color:black;
+}
+.user {
+    color:black;
+    cursor: pointer;
+}
+.logout{
+    position:absolute;
+    display:none;
+    margin-top:70px;
+    margin-left:20px;
 }
   @media screen and (max-width: 700px) {
     .sidebar {
@@ -442,4 +505,44 @@ h1,p{
       div.content-container{
           margin-left:auto;
       }
+      .navbar{
+          display:flex;
+          justify-content: space-between;
+      }
+      .nav-button{
+        background: rgb(215,226,240);
+        background: radial-gradient(circle, rgba(215,226,240,1) 9%, rgba(91,102,98,1) 33%, rgba(219,217,217,1) 65%, rgba(158,167,191,1) 85%);
+        border-radius:10px;
+        margin-top:200px;
+        margin-left:25px;
+        width:400px;
+        position:absolute;
+        display:none;
+      }
+      .nav-button li {
+          list-style: none;
+          text-align: center;
+          padding:10px;
+      }
+      .nav-button li a{
+          padding:10px;
+          width:900px;
+          color:black;
+          font-weight: bold;
+          text-decoration:none;
+          cursor: pointer;
+      }
+      .menu{
+          display:block;
+          border:1px solid rgb(209, 197, 197);
+          border-radius:5px;
+          padding:10px;
+          cursor: pointer;
+      }
+      .user {
+        color:black;
+    }
+    .logout{
+        margin-right:100px;
+    }
   }
