--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,8 +7,7 @@
 
 body {
   font-family: "Mulish", sans-serif;
-  background: #becde3;
-  background: linear-gradient(193deg, #becde3 13%, #91c1db 60%);
+  background: linear-gradient(to right, #ffff99 0%, #336699 100%);
   margin: 0;
 }
 
@@ -54,7 +53,6 @@ body {
 .table td {
   text-align: center;
   padding: 5px;
-  width: 100px;
 }
 
 tr:nth-child(even) {
@@ -86,6 +84,22 @@ tr:nth-child(even) {
 
 .card-text {
   font-size: 25px;
+}
+
+.customer-input .customer-title {
+  width: 940px;
+}
+
+.customer-input .customer-email {
+  width: 635px;
+}
+
+.guest-input .guest-title {
+  width: 640px;
+}
+
+.guest-input .guest-dob {
+  width: 640px;
 }
 
 .customers-info input {
@@ -160,12 +174,19 @@ tr:nth-child(even) {
   margin: 0 auto;
 }
 
-h1,
+h1 {
+  text-align: center;
+  color: black;
+  text-transform: uppercase;
+  font-size: 45px;
+  font-weight: bolder;
+}
+
 p {
   text-align: center;
   color: black;
   text-transform: uppercase;
-  font-weight: 900;
+  font-weight: bolder;
 }
 
 .insert-customer-container,
@@ -202,11 +223,14 @@ p {
   display: flex;
 }
 
-.customers-main-container,
+.customers-main-container {
+  margin: 0 auto;
+  margin-top: -50px;
+}
+
 .guests-main-container {
   margin: 0 auto;
-  position: absolute;
-  top: 70px;
+  margin-top: -10px;
 }
 
 .insert-guest-container-main,
@@ -261,6 +285,7 @@ p {
 .sidebar a {
   display: block;
   color: black;
+  font-weight: bolder;
   padding: 16px;
   border-bottom: 1px solid #e4dcdc;
   text-decoration: none;
@@ -280,8 +305,9 @@ p {
 
 .sidebar a.active {
   text-transform: uppercase;
-  font-weight: bold;
-  background: #e3f3f2;
+  color: white;
+  font-weight: bolder;
+  background: linear-gradient(to bottom, #ccffff 0%, #336699 100%);
 }
 
 .sidebar a:hover:not(.active) {
@@ -305,7 +331,7 @@ div.content-container {
 
 .delete-btn {
   position: absolute;
-  margin-top: 478px;
+  margin-top: 490px;
   margin-left: 290px;
 }
 
@@ -316,12 +342,16 @@ div.content-container {
 }
 
 .delete-guest {
-  margin-top: 520px;
+  margin-top: 531px;
   margin-left: 400px;
 }
 
 .delete-booking {
   margin-top: 2px;
+}
+
+.facility-add {
+  margin: 5px;
 }
 
 .updateguest-container {
@@ -342,7 +372,7 @@ div.content-container {
 
 .confirm-booking {
   position: absolute;
-  margin-top: 470px;
+  margin-top: 460px;
   margin-left: 50px;
 }
 
@@ -365,7 +395,7 @@ div.content-container {
 
 .updateroom-container-one {
   position: absolute;
-  margin-top: 250px;
+  margin-top: 251px;
 }
 
 .updateroom-container-one .update {
@@ -385,7 +415,7 @@ div.content-container {
 .deleteroom-form {
   position: absolute;
   margin-top: -177px;
-  margin-left: 250px;
+  margin-left: 232px;
 }
 
 .deleteroom-btn {
@@ -504,14 +534,14 @@ div.content-container {
 }
 
 .navbar {
-  background: #F4FAFF;
+  background: linear-gradient(to bottom, #ccffff 0%, #336699 100%);
   padding: 10px;
   display: flex;
   justify-content: flex-end;
 }
 
 .nav-button {
-  display: block;
+  display: none;
 }
 
 .login-logout {
@@ -524,17 +554,17 @@ div.content-container {
 
 .login-container,
 .logout-container {
-  padding: 10px;
+  padding: 5px;
 }
 
 .login-container a,
 .logout-container a {
   text-decoration: none;
-  color: black;
+  color: white;
 }
 
 .user {
-  color: black;
+  color: white;
   cursor: pointer;
 }
 
@@ -543,6 +573,36 @@ div.content-container {
   display: none;
   margin-top: 70px;
   margin-left: 20px;
+}
+
+.payment-main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.payment-subcontainer {
+  display: flex;
+  align-content: center;
+  flex-direction: column;
+  align-self: center;
+  margin: 0 auto;
+}
+
+.payment-input {
+  margin: 8px;
+}
+
+.payment-input input {
+  padding: 6px;
+  width: 300px;
+  border-radius: 3px;
+  border: 1px solid #dbd8d8;
+  outline: none;
+}
+
+.endbooking {
+  margin-left: 99px;
 }
 
 @media screen and (max-width: 700px) {
@@ -574,6 +634,9 @@ div.content-container {
     width: 95%;
     position: absolute;
     margin-top: 200px;
+    opacity: 1;
+    transform: rotateX(0deg);
+    transform-origin: top;
   }
 
   .nav-button li {
@@ -598,6 +661,105 @@ div.content-container {
 
   .count-body {
     width: 360px;
+  }
+
+  .deleteroom-form {
+    margin-left: -100px;
+    margin-top: -134px;
+  }
+
+  .searched-customer {
+    display: flex;
+  }
+
+  .searched-customer input,
+  .searched-guest input {
+    width: 200px;
+  }
+
+  .buttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  .buttons a {
+    font-size: 12px;
+  }
+
+  .searchbox {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .insert-customer-container {
+    display: flex;
+    justify-content: center;
+    width: 350px;
+    margin-left: 20px;
+  }
+
+  .customer-input input {
+    width: 300px;
+  }
+
+  .row-one,
+  .row-two,
+  .row-three,
+  .row-four,
+  .row-five,
+  .row-six {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .customer-input .customer-title {
+    width: 300px;
+  }
+
+  .customer-input .customer-email {
+    width: 300px;
+  }
+
+  .customer-insert {
+    margin-left: -40px;
+  }
+
+  .update-container {
+    position: absolute;
+    margin-top: 1010px;
+    margin-left: 180px;
+  }
+
+  .delete-form {
+    position: absolute;
+    margin-top: 617px;
+    margin-left: -220px;
+  }
+
+  .guest-input input {
+    width: 310px;
+  }
+
+  .guest-input .guest-title {
+    width: 310px;
+  }
+
+  .guest-input .guest-dob {
+    width: 310px;
+  }
+
+  .updateguest-container {
+    position: absolute;
+    margin-top: 790px;
+    margin-left: 200px;
+  }
+
+  .deleteguest-form {
+    position: absolute;
+    margin-top: 413px;
+    margin-left: -350px;
   }
 }
 
