payment method cannot add

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -331,7 +331,7 @@ div.content-container {
 
 .delete-btn {
   position: absolute;
-  margin-top: 490px;
+  margin-top: 525px;
   margin-left: 290px;
 }
 
@@ -347,7 +347,7 @@ div.content-container {
 }
 
 .delete-booking {
-  margin-top: 2px;
+  margin-top: 37px;
 }
 
 .facility-add {
@@ -364,10 +364,10 @@ div.content-container {
   position: absolute;
 }
 
-.deleteguest-btn {
+.delete-guest {
   position: absolute;
-  margin-top: 520px;
-  margin-left: 290px;
+  margin-top: 564px;
+  margin-left: 350px;
 }
 
 .confirm-booking {
@@ -414,7 +414,7 @@ div.content-container {
 
 .deleteroom-form {
   position: absolute;
-  margin-top: -177px;
+  margin-top: -212px;
   margin-left: 232px;
 }
 
@@ -628,6 +628,22 @@ div.content-container {
   transform: translateY(-10px);
 }
 
+.booking-input .customer-name {
+  width: 410px;
+}
+
+.booking-input .payment {
+  width: 410px;
+}
+
+.booking-input .paymentmethod {
+  width: 410px;
+}
+
+.booking-input .paymentdue {
+  width: 200px;
+}
+
 @media screen and (max-width: 700px) {
   .sidebar {
     width: 100%;
@@ -697,7 +713,8 @@ div.content-container {
 
   .searched-customer input,
   .searched-guest input,
-  .searched-room input {
+  .searched-room input,
+  .searched-booking input {
     width: 200px;
   }
 
@@ -758,7 +775,7 @@ div.content-container {
 
   .delete-form {
     position: absolute;
-    margin-top: 617px;
+    margin-top: 618px;
     margin-left: -220px;
   }
 
@@ -782,13 +799,17 @@ div.content-container {
 
   .deleteguest-form {
     position: absolute;
-    margin-top: 413px;
-    margin-left: -350px;
+    margin-top: 415px;
+    margin-left: -290px;
   }
 
   .updateroom-container-one {
     position: absolute;
     margin-top: 240px;
+  }
+
+  .deleteroom-btn {
+    margin-top: 490px;
   }
 
   .facility-input input,
@@ -799,6 +820,40 @@ div.content-container {
   .available-box {
     width: 300px;
     margin: 10px;
+  }
+
+  .booking-input input,
+  .booking-input select {
+    width: 300px;
+  }
+
+  .insert-booking-container {
+    margin-left: 30px;
+  }
+
+  .booknow {
+    position: absolute;
+    margin-top: 730px;
+    margin-left: -20px;
+  }
+
+  .booking-input .payment {
+    width: 300px;
+  }
+
+  .booking-input .paymentmethod {
+    width: 300px;
+  }
+
+  .confirm-booking {
+    position: absolute;
+    margin-top: 830px;
+  }
+
+  .deletebooking-form {
+    position: absolute;
+    margin-top: 944px;
+    margin-left: -80px;
   }
 }
 
