--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -547,6 +547,7 @@ p{
     width:300px;
     background:whitesmoke;
     border-radius:10px;
+    margin:10px;
     box-shadow: 5px 10px rgb(124, 121, 121);
     transition: transform 250ms;
 }
