--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Sanchez&display=swap);
 * {
   padding: 0;
   margin: 0;
@@ -6,8 +6,8 @@
 }
 
 body {
-  font-family: "Mulish", sans-serif;
-  background: linear-gradient(to right, #ffff99 0%, #336699 100%);
+  font-family: "Sanchez", serif;
+  background: url(/images/background.png?ca502cb653d80368ea2abf55ee950890);
   margin: 0;
 }
 
@@ -276,7 +276,9 @@ p {
   padding: 0;
   top: 0;
   width: 210px;
-  background-color: #f1f1f1;
+  background-color: whitesmoke;
+  border-top-right-radius: 30px;
+  border-top-left-radius: 30px;
   position: fixed;
   height: 100%;
   overflow: hidden;
@@ -308,11 +310,13 @@ p {
   color: white;
   font-weight: bolder;
   background: linear-gradient(to bottom, #ccffff 0%, #336699 100%);
+  border-radius: 30px;
 }
 
 .sidebar a:hover:not(.active) {
-  background-color: #555;
+  background: linear-gradient(to bottom, #3399ff 0%, #3399ff 100%);
   color: white;
+  transition: 0.4s;
 }
 
 .card {
@@ -498,7 +502,7 @@ div.content-container {
 }
 
 .count-body {
-  background: #f3eded;
+  background: white;
   display: flex;
   justify-content: space-evenly;
   padding: 25px;
@@ -506,7 +510,7 @@ div.content-container {
   width: 400px;
   height: 200px;
   border-radius: 10px;
-  box-shadow: 5px 10px #7c7979;
+  box-shadow: 5px 10px rgba(0, 0, 0, 0.582);
   cursor: pointer;
   transition: transform 250ms;
 }
@@ -534,7 +538,7 @@ div.content-container {
 }
 
 .navbar {
-  background: linear-gradient(to bottom, #ccffff 0%, #336699 100%);
+  border-top-left-radius: 30px;
   padding: 10px;
   display: flex;
   justify-content: flex-end;
@@ -650,8 +654,11 @@ div.content-container {
   flex-direction: column;
 }
 
+.title {
+  color: black;
+}
+
 .about-box {
-  background: whitesmoke;
   border-radius: 5px;
   height: 300px;
   margin: 10px;
@@ -685,7 +692,6 @@ div.content-container {
 .contact-box {
   display: flex;
   flex-direction: column;
-  background: whitesmoke;
   border-radius: 5px;
   width: 300px;
   padding: 10px;
@@ -743,6 +749,37 @@ div.content-container {
   background: lightcyan;
 }
 
+.contact-us-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20px;
+  align-self: center;
+  border: 1px solid #948989;
+  border-radius: 5px;
+}
+
+.contact-input input {
+  width: 300px;
+  outline: none;
+  padding: 4px;
+  border-radius: 5px;
+  border: 1px solid #b8abab;
+}
+
+.contact-input textarea {
+  outline: none;
+  width: 300px;
+  height: 200px;
+  border-radius: 5px;
+  border: 1px solid #b8abab;
+}
+
 @media screen and (max-width: 700px) {
   .sidebar {
     width: 100%;
@@ -793,6 +830,7 @@ div.content-container {
   }
 
   .navbar {
+    border-top-left-radius: 0;
     display: flex;
     justify-content: space-between;
   }
@@ -953,6 +991,24 @@ div.content-container {
     position: absolute;
     margin-top: 944px;
     margin-left: -80px;
+  }
+
+  .about-info h2 {
+    font-size: 13px;
+    font-weight: bolder;
+  }
+
+  .about-img img {
+    width: 150px;
+  }
+
+  .contact-subcontainer {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .contact-box {
+    align-self: center;
   }
 }
 
