fixed menu bar second

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -719,6 +719,7 @@ p{
         left:0;
         top: 190%;
         margin-top: -50px;
+        z-index:9;
     }
     .nav-button li {
     list-style: none;
