--- a/public/css/main.css
+++ b/public/css/main.css
@@ -808,10 +808,11 @@ div.content-container {
   }
 
   .nav-button {
-    background: whitesmoke;
+    background: rgba(5, 5, 5, 0.671);
     border-radius: 10px;
     position: absolute;
     width: 100%;
+    height: 490%;
     left: 0;
     top: 190%;
     margin-top: -50px;
@@ -821,14 +822,21 @@ div.content-container {
   .nav-button li {
     list-style: none;
     text-align: center;
-    padding: 10px;
+    padding: 30px;
+    transition: 0.1s;
+  }
+
+  .nav-button li:hover {
+    background: linear-gradient(to bottom, #3399ff 0%, #3399ff 100%);
   }
 
   .nav-button li a {
+    width: 100%;
     padding: 10px;
     width: 900px;
-    color: black;
-    font-weight: bold;
+    color: whitesmoke;
+    font-weight: bolder;
+    font-size: 20px;
     text-decoration: none;
     cursor: pointer;
   }
