--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -690,9 +690,9 @@ p{
     border:1px solid rgb(184, 171, 171);
 }
   @media screen and (max-width: 700px) {
-      .body{
-          position:relative;
-      }
+    .body{
+        position:relative;
+    }
     .sidebar {
       width: 100%;
       height: auto;
@@ -712,10 +712,11 @@ p{
         padding:10px;
     }
     .nav-button {
-        background:whitesmoke;
+        background:rgba(5, 5, 5, 0.671);
         border-radius:10px;
         position:absolute;
         width:100%;
+        height:490%;
         left:0;
         top: 190%;
         margin-top: -50px;
@@ -724,171 +725,176 @@ p{
     .nav-button li {
     list-style: none;
     text-align: center;
-    padding:10px;
+    padding:30px;
+    transition:0.10s;
+    }
+    .nav-button li:hover {
+    background: linear-gradient(to bottom, #3399ff 0%, #3399ff 100%);
     }
     .nav-button li a{
+    width:100%;
     padding:10px;
     width:900px;
-    color:black;
-    font-weight: bold;
+    color:whitesmoke;
+    font-weight: bolder;
+    font-size:20px;
     text-decoration:none;
     cursor: pointer;
     }
     .navbar {
-        border-top-left-radius: 0;
-        display:flex;
-        justify-content:space-between;
+    border-top-left-radius: 0;
+    display:flex;
+    justify-content:space-between;
     }
     .count-body{
-        width:360px;
+    width:360px;
     }
     .deleteroom-form{
-        margin-left:-100px;
-        margin-top:-134px;
+    margin-left:-100px;
+    margin-top:-134px;
     }
     .searched-customer{
-        display:flex;
+    display:flex;
     }
     .searched-customer input,
     .searched-guest input,
     .searched-room input,
     .searched-booking input{
-        width:200px;
+    width:200px;
     }
     .buttons{
-        display:flex;
-        flex-direction:column;
-        justify-content: space-around;
+    display:flex;
+    flex-direction:column;
+    justify-content: space-around;
     }
     .buttons a{
-        font-size:12px;
-    }
+    font-size:12px;
+}
     // searchbox
     .searchbox{
-        
-        display:flex;
-        flex-direction: column;
-        justify-content: center;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
     }
     // insert customer
     .insert-customer-container{
-        display:flex;
-        justify-content: center;
-        width:350px;
-        margin-left:20px;
+    display:flex;
+    justify-content: center;
+    width:350px;
+    margin-left:20px;
     }
     .customer-input input {
-        width:300px;
+    width:300px;
     }
     .row-one,.row-two,.row-three,.row-four,.row-five,.row-six{
-        display:flex;
-        flex-direction:column;
+    display:flex;
+    flex-direction:column;
     }
     .customer-input .customer-title{
-        width:300px;
+    width:300px;
     }
     .customer-input .customer-email{
-        width:300px;
+    width:300px;
     }
     .customer-insert{
-        margin-left:-40px;
+    margin-left:-40px;
     }
     // show customer
     .update-container{
-        position:absolute;
-        margin-top:1010px;
-        margin-left:180px;
+    position:absolute;
+    margin-top:1010px;
+    margin-left:180px;
     }
     .delete-form{
-        position: absolute;
-        margin-top:618px;
-        margin-left:-220px;
+    position: absolute;
+    margin-top:618px;
+    margin-left:-220px;
     }
     // guest insert
     .guest-input input{
-        width:310px;
+    width:310px;
     }
     .guest-input .guest-title{
-        width:310px;
+    width:310px;
     }
     .guest-input .guest-dob{
-        width:310px;
+    width:310px;
     }
     // show guest
     .updateguest-container{
-        position:absolute;
-        margin-top:790px;
-        margin-left:200px;
+    position:absolute;
+    margin-top:790px;
+    margin-left:200px;
     }
     .deleteguest-form{
-        position:absolute;
-        margin-top:415px;
-        margin-left:-290px;
+    position:absolute;
+    margin-top:415px;
+    margin-left:-290px;
     }
     // show room
     .updateroom-container-one{
-        position:absolute;
-        margin-top:240px;
+    position:absolute;
+    margin-top:240px;
     }
     .deleteroom-btn{
-        margin-top:490px;
+    margin-top:490px;
     }
     // facilities
     .facility-input input,
     .facility-input select{
-        width:300px;        
+    width:300px;        
     }
     .available-box{
-        width:300px;
-        margin:10px;
+    width:300px;
+    margin:10px;
     }
     // bookings
     .booking-input input,
     .booking-input select{
-        width:300px;
+    width:300px;
     }
     .insert-booking-container{
-        margin-left:30px;
+    margin-left:30px;
     }
     .booknow{
-        position:absolute;
-        margin-top:730px;
-        margin-left:-20px;
+    position:absolute;
+    margin-top:730px;
+    margin-left:-20px;
     }
     // show booking
     .booking-input .payment{
-        width:300px;
+    width:300px;
     }
     .booking-input .paymentmethod{
-        width:300px;
+    width:300px;
     }
     .confirm-booking{
-        position:absolute;
-        margin-top:830px;
+    position:absolute;
+    margin-top:830px;
     }
     .deletebooking-form{
-        position:absolute;
-        margin-top:944px;
-        margin-left:-80px;
+    position:absolute;
+    margin-top:944px;
+    margin-left:-80px;
     }
     // about us page
     .about-info h2{
-        font-size:15px;
-        font-weight:bolder;
+    font-size:15px;
+    font-weight:bolder;
     }
     .about-img img {
-        width:150px;
+    width:150px;
     }
     .about-box{
-        margin:0;
+    margin:0;
     }
     // contact
     .contact-subcontainer{
-        display:flex;
-        flex-direction:column;
+    display:flex;
+    flex-direction:column;
     }
     .contact-box{
-        align-self:center;
+    align-self:center;
     }
   }
     
@@ -898,52 +904,3 @@ p{
       float: none;
     }
   }
-//   @media screen and (max-width: 395px){
-      
-//       div.content-container{
-//           margin-left:auto;
-//       }
-//       .navbar{
-//           display:flex;
-//           justify-content: space-between;
-//       }
-//       .nav-button{
-//         background: rgb(215,226,240);
-//         background: radial-gradient(circle, rgba(215,226,240,1) 9%, rgba(91,102,98,1) 33%, rgba(219,217,217,1) 65%, rgba(158,167,191,1) 85%);
-//         border-radius:10px;
-//         margin-top:200px;
-//         margin-left:25px;
-//         width:400px;
-//         position:absolute;
-//         display:none;
-//       }
-//       .nav-button li {
-//           list-style: none;
-//           text-align: center;
-//           padding:10px;
-//       }
-//       .nav-button li a{
-//           padding:10px;
-//           width:900px;
-//           color:black;
-//           font-weight: bold;
-//           text-decoration:none;
-//           cursor: pointer;
-//       }
-//       .menu{
-//           display:block;
-//           border:1px solid rgb(209, 197, 197);
-//           border-radius:5px;
-//           padding:10px;
-//           cursor: pointer;
-//       }
-//       .user {
-//         color:black;
-//     }
-//     .logout{
-//         margin-right:100px;
-//     }
-//     .count-body{
-//         padding:20px;
-//     }
-//   }
