learn how to deploy this project

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: "Sanchez", serif;
-  background: url(/images/background.png?ca502cb653d80368ea2abf55ee950890);
+  background: url("/img/background.png");
   margin: 0;
 }
 
