--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -7,7 +7,7 @@
 }
 body {
     font-family: 'Sanchez', serif;
-    background: url('img/background.png');
+    background: url('/img/background.png');
     margin: 0;
 }
 .table{
